update /api/v1alph1/requests endpoint
